frp/cert-manager/manual-aws/ingress-principal-https-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal-https-dev
  namespace: nginx-test
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "test.luis122448.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test-service
            port:
              number: 80
  tls:
  - hosts:
    - test.luis122448.dev
    secretName: luis122448-dev-aws-tls
